--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -192,7 +192,8 @@ body
 	margin: 0 auto
 	padding: 7px 7px 0
 	min-width: 1260px
-	max-width: 1680px
+	max-width: 1920px
+	//max-width: 1680px
 	height: 100%
 	min-height: 100%
 	+border-radius(8px)
@@ -2086,7 +2087,8 @@ $spin-size: 69px !default
 	padding: 7px
 	font-size: 0
 	min-width: 1260px
-	max-width: 1680px
+	max-width: 1920px
+	//max-width: 1680px
 	+rh(890)
 		margin-top: -63px
 	.col-left
