--- a/sass/_common2.sass
+++ b/sass/_common2.sass
@@ -440,18 +440,9 @@ td
 		margin: 0 210px 0 110px
 		width: auto
 		max-width: none
-		+r(1040)
-			background-color: #454343
-		.ticker__text
-			overflow: hidden
-			text-overflow: ellipsis	
-			+r(1040)
-				display: none
+		background-color: #454343
 		.time
-			display: none
-			+r(1040)
-				display: block
-				font-size: 25px	
+			font-size: 25px	
 
 //top-t
 .top-t
